# smart_ptr

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  type_deduction_test.cpp  type_deduction_test2.cpp  type_deduction_test3.cpp
include/: control_.hpp  func.hpp  unique_ptr.hpp
src/: test_func.cpp  test_make_shared.cpp  test_smart.cpp
